# nand2tetris

./: .gitignore
projects/tools/hack_assembler/: Cargo.toml
projects/tools/hack_assembler/src/: lib.rs  main.rs  parser.rs  symbol_table.rs  tokenizer.rs
projects/tools/hack_assembler/src/instructions/: ainstruction.rs
projects/tools/vm_translator/: Cargo.toml
projects/tools/vm_translator/src/: codewriter.rs  lib.rs  main.rs  parser.rs  translator.rs
projects/tools/vm_translator/src/code_writer/: label_generator.rs  mod.rs  namespace_var_mgr.rs  reg_mgr.rs  writer.rs
projects/tools/vm_translator/src/code_writer/asm_generator/: arithmetic.rs  flow.rs  marker.rs  memory.rs  mod.rs  register.rs  stack.rs
projects/tools/vm_translator/src/code_writer/label_manager/: label_generator.rs  manager.rs  mod.rs
projects/tools/vm_translator/test_files/FunctionCalls/FibonacciElement/: FibonacciElement.asm
projects/tools/vm_translator/test_files/FunctionCalls/NestedCall/: NestedCall.asm
projects/tools/vm_translator/test_files/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/tools/vm_translator/test_files/FunctionCalls/StaticsTest/: StaticsTest.asm
projects/tools/vm_translator/test_files/MemoryAccess/BasicTest/: BasicTest.asm
projects/tools/vm_translator/test_files/MemoryAccess/PointerTest/: PointerTest.asm
projects/tools/vm_translator/test_files/MemoryAccess/StaticTest/: StaticTest.asm
projects/tools/vm_translator/test_files/ProgramFlow/BasicLoop/: BasicLoop.asm
projects/tools/vm_translator/test_files/StackArithmetic/SimpleAdd/: SimpleAdd.asm
(+47 files in other folders)
