[package]
name = "hack_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
clap = { version = "3.1.18", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.31"
