[package]
name = "vm_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
clap = { version = "3.1.18", features = ["derive"] }
lazy_static = "1.4.0"
phf = { version = "0.10.1", features = ["macros"] }
thiserror = "1.0.31"

[dev-dependencies]
test-case = "2.1.0"
